--- a/nginx/wp.conf
+++ b/nginx/wp.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    listen 443 ssl;
+    # listen 443 ssl;
     server_name $SITE_URL;
  
     root /var/www/html;
@@ -9,10 +9,12 @@ server {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
-    ssl_certificate           /etc/letsencrypt/live/example.com/fullchain.pem;
-    ssl_certificate_key       /etc/letsencrypt/live/example.com/privkey.pem;
-    ssl_trusted_certificate   /etc/letsencrypt/live/example.com/chain.pem;
- 
+    #ssl_certificate           /etc/letsencrypt/live/example.com/fullchain.pem;
+    #ssl_certificate_key       /etc/letsencrypt/live/example.com/privkey.pem;
+    #ssl_trusted_certificate   /etc/letsencrypt/live/example.com/chain.pem;
+
+    client_max_body_size 200M;
+
     location / {
         try_files $uri $uri/ /index.php?$args;
     }
@@ -29,6 +31,6 @@ server {
 
     location ^~ /.well-known {
         allow all;
-        root  /data/letsencrypt/;
+        # root  /data/letsencrypt/;
     }
 }
